Adding the new features to files

--- a/news.html
+++ b/news.html
@@ -9,5 +9,6 @@
 <body>
     <h2>News Page</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur similique expedita illo sint autem facere totam distinctio saepe repellat labore! Totam dolor libero corrupti, consectetur atque esse ea quos minima.</p>
+    <h1>this is a new features</h1>
 </body>
 </html>
