--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
 <body>
    <h2>About us page</h2> 
    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam perspiciatis, qui sapiente consequatur aliquam neque laboriosam ex rerum quia reprehenderit harum odio quo in ipsam officia suscipit maiores ipsa maxime!</p>
+   <h1>this is a about page features</h1>
 </body>
 </html>
