skipping the stage area

--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 </head>
 <body>
    <h2>About us page</h2> 
-   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam perspiciatis, qui sapiente consequatur aliquam neque laboriosam ex rerum quia reprehenderit harum odio quo in ipsam officia suscipit maiores ipsa maxime!</p>
+   <p>Lorem ipsum dolor sit amet consectrehenderit harum odio quo in ipsam officia suscipit maiores ipsa maxime!</p>
+   <h2>Lorem ipsum dolor sit amet.</h2>
    <h1>this is a about page features</h1>
 </body>
 </html>
