--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Contact us page</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil similique maxime fuga natus rem ea quasi molestias perspiciatis, mollitia hic. Deleniti ipsa deserunt atque possimus ab quisquam sint aut consequatur?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nih</p>
+    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
 </body>
 </html>
