--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,6 @@
     <h1>Contact us page</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nih</p>
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    Lorem ipsum dolor sit.
 </body>
 </html>
