this is updated file in new_updatecode branch

--- a/contact.html
+++ b/contact.html
@@ -11,5 +11,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nih</p>
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
     Lorem ipsum dolor sit.
+
+    <a href="#">Hello world!</a>
 </body>
 </html>
